--- a/Grunnferdigheter i Javascript (Uke 2)/1 Ferdighet.html
+++ b/Grunnferdigheter i Javascript (Uke 2)/1 Ferdighet.html
@@ -2,7 +2,7 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <link href="JavaTest.css" rel="stylesheet"
+    <link href="1 Ferdighet.css" rel="stylesheet"
     <meta charset="utf-8" />
     <title>JavascriptTest</title>
 </head>
