--- a/Grunnferdigheter i Javascript (Uke 2)/4 Ferdighet.html
+++ b/Grunnferdigheter i Javascript (Uke 2)/4 Ferdighet.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <title>Ferdighet 4</title>
-    <link href="Ferdighet4.css" rel="stylesheet"/>
+    <link href="4Ferdighet.css" rel="stylesheet"/>
 </head>
 <body>
     <h1>
